--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,10 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  --bgColor: #fff;
+  --contentColor: #000;
+  --headerBgColor: #0087b0;
+  --headerTextColor: #fff;
 }
 
 code {
