--- a/src/components/headers/button/buttonIcons.module.css
+++ b/src/components/headers/button/buttonIcons.module.css
@@ -1,4 +1,4 @@
-.button {
+.btn {
   width: 50px;
   height: 50px;
   border: none;
@@ -8,11 +8,11 @@
   border-radius: 5px;
 }
 
-.button:hover {
+.btn:hover {
   background-color: #ff7a39;
 }
 
-.button > img {
+.btn > img {
   width: 40px;
   height: 40px;
   background-position: center center;
