--- a/src/components/headers/topPanel/topPanel.module.css
+++ b/src/components/headers/topPanel/topPanel.module.css
@@ -10,3 +10,11 @@
   display: flex;
   flex-direction: row;
 }
+
+.registrBtn {
+  border: none;
+  background-color: #0087b0;
+  color: white;
+  cursor: pointer;
+}
+
