--- a/src/components/modal/modal.css
+++ b/src/components/modal/modal.css
@@ -24,9 +24,9 @@
     background-color: #fff;
     transform: scale(0.5);
     transition: 0.4s all;
-    width: 50vw;
+    width: 10vw;
 }
 
-.modal__content{
-    transform: scale(1);
+.modal__content.active{
+    transform: scale(1.5);
 }
