--- a/src/components/content/card/Card.module.css
+++ b/src/components/content/card/Card.module.css
@@ -3,7 +3,6 @@
   margin: 0;
 }
 .cardItem {
-  width: 300px;
   box-sizing: border-box;
   border: 1px solid transparent;
   border-radius: 5px;
@@ -24,8 +23,7 @@
 }
 
 .cardPictures {
-  width: 250px;
-  height: 250px;
+  width: 80%;
 }
 
 .imageItem {
@@ -64,6 +62,7 @@
   cursor: pointer;
   border: none;
   border-radius: 7px;
+  width: 100%;
 }
 
 .buttonItem:hover {
