--- a/src/components/modal/modal.css
+++ b/src/components/modal/modal.css
@@ -2,6 +2,7 @@
     width: 100vw;
     height: 100vh;
     background-color: rgba(0,0,0, 0.6);
+    backdrop-filter: blur(10px);
     position: fixed;
     top:0;
     left:0;
@@ -22,7 +23,7 @@
 	display: inline-flex;
     padding:20px;
     border-radius: 12px;
-    background-color: #fff;
+    background-color: rgba(255,255,255, 0.6);
     transform: scale(0.5);
     transition: 0.4s all;
     
