--- a/src/components/headers/adminHeaderIcons/adminHeaderIcons.module.css
+++ b/src/components/headers/adminHeaderIcons/adminHeaderIcons.module.css
@@ -1,11 +1,11 @@
 .btn {
-  width: 50px;
-  height: 50px;
+  width: 40px;
+  height: 40px;
   border: none;
   background-color: #0087b0;
-  margin: 10px;
+  margin: 0;
   padding: 0;
-  border-radius: 5px;
+  border-radius: 50%;
 }
 
 .btn:hover {
@@ -16,4 +16,6 @@
   width: 40px;
   height: 40px;
   background-position: center center;
+  margin: 0;
+  padding: 0;
 }
