--- a/src/pages/catalogPage/Catalog.css
+++ b/src/pages/catalogPage/Catalog.css
@@ -1,3 +1,24 @@
 .catalog {
 width: 100%;
 }
+
+.sort-cards {
+    margin: 40px;
+    display: flex;
+    justify-content: center;
+}
+
+.sort-item {
+    font-size: 23px;
+    margin-left: 20px;
+    cursor: pointer;
+}
+
+.sort-item:hover {
+    color: #ff7a39;
+}
+
+.sort-item:active {
+    color: #ff7a39;
+}
+
