--- a/src/components/content/pagination/paginate.css
+++ b/src/components/content/pagination/paginate.css
@@ -10,7 +10,7 @@
   justify-content: flex-end;
   margin: 20px 40px;
   font-size: 1.2rem;
-  margin-right: 260px;
+  margin-right: 220px;
 }
 
 .selectCount {
@@ -36,13 +36,32 @@
   color: #ff7a39;
 }
 
-.selectNumber {
+.selectNumber{
+	display: flex;
+	flex-direction: row;
+	gap: 30px;
+}
+
+
+.paginate {
   display: flex;
   gap: 30px;
   padding-top: 20px;
   padding-bottom: 20px;
   background-color: #0087b0;
-  justify-content: center;
+  justify-content: space-around;
 }
 
+.bntPaginate{
+	background-color: #0087b0;
+	color: #fff;
+	border: none;
+	margin: 0;
+	padding: 0;
+	font-size: 20px;
+}
+
+.bntPaginate:hover{
+	color: #ff7a39;
+}
 
