--- a/src/components/content/pagination/paginate.css
+++ b/src/components/content/pagination/paginate.css
@@ -25,6 +25,7 @@
   text-decoration: none;
   padding: 10px 20px;
   border: 1px solid transparent;
+  background-color: #0087b0;
 }
 
 .page-link:hover {
