--- a/src/components/content/product/Product.css
+++ b/src/components/content/product/Product.css
@@ -1,3 +1,7 @@
+.cardProduct__container{
+	display: flex;
+	flex-direction: column;
+}
 .cardProduct {
     width: 100%;
     height: 71vh;
@@ -34,9 +38,20 @@
 
 .productReviews {
     display: flex;
+	flex-direction: column;
     justify-content: space-between;
     margin-top: 20px;
     align-items: center;
+
+}
+
+.productReviews__header{
+	width: 100%;
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: space-around;
+		padding: 20px;
 }
 
 .reviewsButton {
