--- a/src/components/headers/topPanel/topPanel.module.css
+++ b/src/components/headers/topPanel/topPanel.module.css
@@ -4,6 +4,7 @@
   justify-content: space-between;
   padding: 0 40px;
   margin-bottom: 20px;
+  font-size: 24px;
 }
 
 .autoriz {
@@ -16,5 +17,7 @@
   background-color: #0087b0;
   color: white;
   cursor: pointer;
+  font-size: 24px;
+  margin: 0 5px;
 }
 
