--- a/src/components/modal/modal.css
+++ b/src/components/modal/modal.css
@@ -1,35 +1,49 @@
-.modal{
-    width: 100vw;
-    height: 100vh;
-    background-color: rgba(0,0,0, 0.6);
-    backdrop-filter: blur(10px);
-    position: fixed;
-    top:0;
-    left:0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    opacity: 0;
-    transition: 0.5s;
-    pointer-events: none;
-    z-index: 999;
+.modal {
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.6);
+  backdrop-filter: blur(10px);
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  opacity: 0;
+  transition: 0.5s;
+  pointer-events: none;
+  z-index: 999;
 }
 
-.modal.active{
-    opacity: 1;
-    pointer-events: all;
+.modal.active {
+  opacity: 1;
+  pointer-events: all;
 }
 
-.modal__content{
-	display: inline-flex;
-    padding:20px;
-    border-radius: 12px;
-    background-color: rgba(255,255,255, 0.6);
-    transform: scale(0.5);
-    transition: 0.4s all;
-    
+.modal__content {
+  display: inline-flex;
+  padding: 20px;
+  border-radius: 12px;
+  background-color: rgba(255, 255, 255, 0.6);
+  transform: scale(0.5);
+  transition: 0.4s all;
 }
 
-.modal__content.active{
-    transform: scale(1.5);
+.modal__content.active {
+  transform: scale(1.5);
+}
+
+.modal__close {
+  background-image: url("./../../images/close.png");
+  background-size: 25px 25px;
+  background-repeat: no-repeat;
+  background-position: center center;
+  width: 25px;
+  height: 25px;
+  cursor: pointer;
+  background-color: transparent;
+  border: none;
+  position: absolute;
+  top: 15px;
+  right: 15px;
 }
