--- a/src/components/popapAddCartProduct/popapAddCartProduct.css
+++ b/src/components/popapAddCartProduct/popapAddCartProduct.css
@@ -1,5 +1,57 @@
 .createModalForm {
   color: black;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  text-align: center;
+  min-width: 400px;
+}
+
+.createModalFormTitle {
+  margin-bottom: 35px;
+}
+
+.form-field-input {
+  height: 24px;
+  width: 240px;
+  border-radius: 15px;
+  padding-left: 10px;
+  outline: none;
+}
+
+.field-form-div {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 40px;
+}
+
+.button-form-duble {
+  display: flex;
+  justify-content: space-between;
+  margin: 0 90px 0 70px;
+}
+
+.btn {
+  text-decoration: none;
+  display: inline-block;
+  padding: 0 12px;
+  background: #0087b0;
+  color: white;
+  text-transform: uppercase;
+  font-size: 12px;
+  line-height: 28px;
+  cursor: pointer;
+  border: none;
+  border-radius: 15px;
+  width: 100px;
+}
+
+.btn:hover {
+  background-color: #ff7a39;
 }
 
 .createModalFormTitle {
