--- a/src/components/content/pagination/paginate.css
+++ b/src/components/content/pagination/paginate.css
@@ -33,10 +33,12 @@
   border: 1px solid #fff;
   border-radius: 50%;
 }
-
-.page-link:active {
+.active {
   color: #ff7a39;
+  border: 1px solid #ff7a39;
 }
+
+
 
 .selectNumber {
   display: flex;
