--- a/src/components/modal/modal.css
+++ b/src/components/modal/modal.css
@@ -1,9 +1,9 @@
 .modal {
-  width: 100vw;
-  height: 100vh;
+  position: fixed;
+  width: 100%;
+  height: 100%;
   background-color: rgba(0, 0, 0, 0.6);
   backdrop-filter: blur(10px);
-  position: fixed;
   top: 0;
   left: 0;
   display: flex;
