--- a/src/components/content/accordionItem/accordionItem.module.css
+++ b/src/components/content/accordionItem/accordionItem.module.css
@@ -18,13 +18,9 @@
   align-items: center;
   padding: 20px 50px 20px 10px;
   cursor: pointer;
-  background-color: #0087b0;
-  color: white;
-}
+  color:#0087b0 ;
+  background-color: #ffffff;
 
-.accordionTitle:hover {
-  background-color: #0087b0;
-  color: white;
 }
 
 .title {
@@ -34,8 +30,14 @@
 }
 
 .icon {
-  font-size: 1.5rem;
-  font-weight: 700;
+ width: 40px;
+ height: 40px;
+}
+
+.icon_active{
+	 width: 50px;
+ height: 50px;
+ rotate: 90deg;
 }
 
 .content {
