--- a/src/components/content/card/Card.module.css
+++ b/src/components/content/card/Card.module.css
@@ -39,10 +39,16 @@
 }
 
 .cardDiscount {
-  color: #ffffff;
-  width: 75px;
-  height: 75px;
-  font-size: 22px;
+    color: #ffffff;
+    width: 65px;
+    height: 60px;
+    line-height: 19px;
+    font-size: 18px;
+    font-weight: 900;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
 }
 
 .cardPictures {
