--- a/src/components/formReview/formReview.module.css
+++ b/src/components/formReview/formReview.module.css
@@ -1,9 +1,49 @@
 .formContainer {
+    color: black;
     display: flex;
     flex-direction: column;
-}
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    text-align: center;
+    min-width: 300px;
+  }
+  
+  .formTitle {
+    margin-top: 10px;
+    margin-bottom: 15px;
+  }
 
-.form__btns {
-display: flex;
-flex-direction: row;
-}
+  .formInput {
+    margin: 20px 0;
+    width: 280px;
+    height: 150px;
+  }
+
+  .form__btns {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+  }
+  
+  .btn {
+    text-decoration: none;
+    display: inline-block;
+    padding: 0 12px;
+    background: #0087b0;
+    color: white;
+    text-transform: uppercase;
+    font-size: 12px;
+    line-height: 28px;
+    cursor: pointer;
+    border: none;
+    border-radius: 15px;
+    width: 100px;
+  }
+  
+  .btn:hover {
+    background-color: #ff7a39;
+  }
+
+  
