--- a/src/components/headers/topPanel/topPanel.module.css
+++ b/src/components/headers/topPanel/topPanel.module.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: center;
   padding: 0 40px;
   margin-bottom: 20px;
   font-size: 24px;
@@ -10,6 +11,7 @@
 .autoriz {
   display: flex;
   flex-direction: row;
+  align-items: center;
 }
 
 .registrBtn {
@@ -21,3 +23,15 @@
   margin: 0 5px;
 }
 
+.userName {
+  font-size: 24px;
+  line-height: 0;
+  padding: 0 10px;
+}
+.exitBtn {
+  background-color: transparent;
+  border: none;
+}
+.exitIcon {
+  width: 30px;
+}
