--- a/src/components/slider/slider.module.css
+++ b/src/components/slider/slider.module.css
@@ -1,11 +1,25 @@
-.nextSlide,
+.slider {
+  position: relative;
+  width: 100%;
+  height: 455px;
+}
+
+.nextSlide {
+  display: none;
+}
+
 .lastSlide {
   display: none;
+}
+
+.activeSlide {
+  display: block;
   width: 100%;
 }
 
-.currentSlide {
-  display: block;
+.slider__image {
+  object-fit: contain;
+  width: 100%;
 }
 
 .slider__arrows {
@@ -17,19 +31,28 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: center;
 }
 
 .slider__arrow {
-  width: 40px;
-  height: 40px;
+  width: 50px;
+  height: 50px;
   fill: #fff;
-  background-color: #0087b0;
+  background-color: #99cfdf;
+  border-radius: 50%;
   cursor: pointer;
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+.slider__arrow:hover {
+  background: #ff7a39;
+  transition: 0.15s ease-in;
 }
 
 .slider__dots {
   position: absolute;
-  bottom: 20px;
+  bottom: -30px;
   left: 50px;
   right: 50px;
   display: flex;
@@ -38,18 +61,24 @@
 }
 
 .slider__dot {
-  width: 7px;
-  height: 7px;
+  width: 9px;
+  height: 9px;
   border-radius: 50%;
-  background: #000;
+  background: #0087b0;
   margin-right: 5px;
   cursor: pointer;
 }
 
 .slider__dot_active {
-  background: green;
+  width: 9px;
+  height: 9px;
+  border-radius: 50%;
+
+  margin-right: 5px;
+  cursor: pointer;
+  background: #ff7a39;
 }
 
 .slider__dot:hover {
-  background: #fff;
+  background: #0fdf16;
 }
