--- a/src/components/headers/userHeaderIcons/UserHeaderIcons.module.css
+++ b/src/components/headers/userHeaderIcons/UserHeaderIcons.module.css
@@ -51,3 +51,18 @@
   margin-top: 3px;
   margin-left: -31px;
 }
+
+[data-tooltip]::after{
+  content: attr(data-tooltip);
+  opacity: 0;
+  transition: 1s;
+  border: 1px solid grey;
+  position: absolute;
+  top: 0;
+  left:65px;
+}
+
+.userIcon[data-tooltip]:hover::after {
+  opacity: 1;
+  top: 2em;
+}
