--- a/src/components/footers/footer/Footer.css
+++ b/src/components/footers/footer/Footer.css
@@ -2,4 +2,13 @@
   background-color: #0087b0;
   color: white;
   padding: 10px 0 15px;
+  
+  width: 100%;
+
+
+}
+.content{
+  display: flex;
+  flex-direction: column;
+  padding: 0;
 }
