--- a/src/components/main/main.module.css
+++ b/src/components/main/main.module.css
@@ -4,6 +4,8 @@
   width: 80%;
   margin: 0 auto;
   padding-top: 30px;
+  padding-bottom: 30px;
+  height: calc(100% - 120px);
 }
 
 .smile {
@@ -12,6 +14,7 @@
   height: 280px;
   margin-left: auto;
   margin-right: auto;
+  fill: #7b8e98;
 }
 
 .title {
@@ -34,26 +37,19 @@
   color: #7b8e98;
 }
 
-.link {
-  box-sizing: border-box;
+.autoriz {
+  margin-top: 15px;
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  padding: 9px 16px;
-  gap: 10px;
+}
 
-  width: 160px;
-  height: 40px;
-  border: 1px solid #cfd8dc;
-  border-radius: 87px;
+.registrBtn {
+  padding: 10px;
+  color: #0087b0;
+  font-size: 24px;
   font-family: 'Nunito';
   font-style: normal;
   font-weight: 700;
-  font-size: 16px;
-  line-height: 14px;
-  color: #1a1a1a;
-  margin-right: auto;
-  margin-left: auto;
-  margin-top: 20px;
 }
