--- a/src/components/content/pagination/paginate.module.css
+++ b/src/components/content/pagination/paginate.module.css
@@ -19,7 +19,7 @@
   font-size: 1.2rem;
 }
 
-.page-link {
+.page-item {
   color: #fff;
   font-size: 22px;
   text-decoration: none;
@@ -29,11 +29,17 @@
   cursor: pointer;
 }
 
-.page-link:hover {
+.page-item:hover {
   border: 1px solid #fff;
   border-radius: 50%;
 }
 .activate {
+  font-size: 22px;
+  text-decoration: none;
+  padding: 10px 20px;
+  border: 1px solid transparent;
+  background-color: #0087b0;
+  cursor: pointer;
   color: #ff7a39;
   border: 1px solid #ff7a39;
 }
