--- a/src/pages/orUsPage/oruspage.module.css
+++ b/src/pages/orUsPage/oruspage.module.css
@@ -1,4 +1,19 @@
-.container{
-	width: 100%;
-	height: 100vh;
+.container {
+  width: 92%;
+  height: 100vh;
+  padding: 40px 50px;
+}
+
+.pageTitle {
+  text-align: center;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  width: 90%;
+}
+
+.paragraph {
+  text-indent: 40px;
+  font-size: 17px;
+  width: 100%;
+  margin-bottom: 15px;
 }
