--- a/src/pages/profilePage/profile.module.css
+++ b/src/pages/profilePage/profile.module.css
@@ -1,7 +1,7 @@
 .container {
   width: 92%;
   height: 100vh;
-  padding: 40px 50px;
+  padding: 40px 50px 40px 60px;
 }
 
 .title {
@@ -17,7 +17,7 @@
 
 .avatarBox {
   width: 500px;
-  height: 500px;
+  height: 600px;
   display: flex;
   flex-direction: column;
 }
@@ -36,6 +36,7 @@
   border: none;
   border-radius: 5px;
   margin-left: auto;
+
 }
 
 .btnChange {
