--- a/src/pages/favoritesPage/favoritespage.css
+++ b/src/pages/favoritesPage/favoritespage.css
@@ -1,7 +1,11 @@
 .favorites__products {
   display: flex;
   flex-direction: column;
-  width: 100vw;
+  width: 100%;
+  padding: 40px 50px 40px 60px;
+  width: 92%;
 }
 
-
+.headerPage{
+margin-left: 50px;
+}
