--- a/src/components/content/card/Card.module.css
+++ b/src/components/content/card/Card.module.css
@@ -3,7 +3,7 @@
   margin: 0;
 }
 .cardItem {
-  width: 25%;
+  /* width: 25%; */
   box-sizing: border-box;
   border: 1px solid transparent;
   border-radius: 5px;
