--- a/src/components/content/cardList/CardList.module.css
+++ b/src/components/content/cardList/CardList.module.css
@@ -1,12 +1,8 @@
 .products {
-  /* display: grid; */
-  /* grid-template-columns: repeat(4, 0.1rem); */
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-   margin-top: 30px;
-  justify-content: flex-start;
-  padding: 0 0 0 60px;
-  margin-left: 0;
-  margin-right: 0;
+    display: grid;
+    grid-template-columns: repeat(4, 15rem);
+    gap: 30px;
+    place-items: center;
+    margin-top: 30px;
+    justify-content: space-evenly;
 }
