--- a/src/components/content/product/Product.module.css
+++ b/src/components/content/product/Product.module.css
@@ -8,7 +8,7 @@
   display: flex;
   gap: 70px;
   font-size: 20px;
-  justify-content: center;
+  justify-content: space-evenly;
 }
 
 .leftBar {
@@ -24,6 +24,7 @@
 
 .rightBar {
   padding-top: 50px;
+  width: 40%;
 }
 
 .cardDesc {
@@ -218,6 +219,7 @@
   flex-direction: row;
   justify-content: flex-start;
   align-items: center;
+  padding: 20px 0;
 }
 
 .card__сhosen {
