--- a/src/pages/orUsPage/oruspage.module.css
+++ b/src/pages/orUsPage/oruspage.module.css
@@ -2,6 +2,8 @@
   width: 92%;
   height: 100vh;
   padding: 40px 50px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .pageTitle {
@@ -16,4 +18,10 @@
   font-size: 17px;
   width: 100%;
   margin-bottom: 15px;
+  font-size: 25px;
 }
+
+h1 {
+  font-size: 45px;
+}
+
