--- a/src/pages/basketPage/basket.module.css
+++ b/src/pages/basketPage/basket.module.css
@@ -1,8 +1,13 @@
-
+.containerBasketPage{
+	padding: 40px 0 40px 40px;
+	/* height: 100vh; */
+	height: calc(100vh - 125px);
+}
 .countProducts{
-	font-size: 20px;
+	font-size: 25px;
+	margin-top: 10px;
 }
 
 .count {
-	font-weight: 800;
+	font-weight: 600;
 }
