--- a/src/components/main/main.module.css
+++ b/src/components/main/main.module.css
@@ -5,7 +5,7 @@
   margin: 0 auto;
   padding-top: 30px;
   padding-bottom: 30px;
-  height: calc(100% - 120px);
+  height: calc(100vh - 367px);
 }
 
 .smile {
