--- a/src/pages/orUsPage/oruspage.module.css
+++ b/src/pages/orUsPage/oruspage.module.css
@@ -4,6 +4,7 @@
   padding: 40px 50px;
   margin-left: auto;
   margin-right: auto;
+  height: calc(100vh - 387.5px);
 }
 
 .pageTitle {
@@ -23,5 +24,6 @@
 
 h1 {
   font-size: 45px;
+  margin-left: 90px;
 }
 
