--- a/src/pages/basketPage/basket.module.css
+++ b/src/pages/basketPage/basket.module.css
@@ -1,7 +1,7 @@
 .containerBasketPage{
 	padding: 40px 0 40px 40px;
 	/* height: 100vh; */
-	height: calc(100vh - 387.5px);
+	min-height: calc(100vh - 387.5px);
 }
 .countProducts{
 	font-size: 25px;
