--- a/src/components/chart/chart.module.css
+++ b/src/components/chart/chart.module.css
@@ -1,4 +1,7 @@
 .chart {
-  width: 1200px;
-  height: 700px;
+  width: 800px;
+  height: 500px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 30px;
 }
