--- a/src/components/footers/footerContent/footerContent.module.css
+++ b/src/components/footers/footerContent/footerContent.module.css
@@ -1,6 +1,7 @@
 .content {
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-between;
+	padding: 0 80px;
 }
 
