--- a/src/pages/orUsPage/oruspage.module.css
+++ b/src/pages/orUsPage/oruspage.module.css
@@ -1,10 +1,10 @@
 .container {
   width: 92%;
-  height: 100vh;
+  
   padding: 40px 50px;
   margin-left: auto;
   margin-right: auto;
-  height: calc(100vh - 387.5px);
+  min-height: calc(100vh - 387.5px);
 }
 
 .pageTitle {
