--- a/src/components/footers/footerContacts/footerContacts.module.css
+++ b/src/components/footers/footerContacts/footerContacts.module.css
@@ -2,3 +2,23 @@
 	display: flex;
 	flex-direction: column;
 }
+
+.title{
+	color: white;
+	font-size: 1.4rem;
+	margin-bottom: 15px;
+}
+
+@media (min-width: 641px) and (max-width: 1199px){
+	.title{
+		margin-top: 15px;
+		margin-bottom: 15px;
+	}
+  }
+  
+@media (max-width: 640px){
+	.title{
+		margin-top: 15px;
+		margin-bottom: 15px;
+	}
+  }
