--- a/src/components/headers/logo/logo.module.css
+++ b/src/components/headers/logo/logo.module.css
@@ -2,3 +2,18 @@
   width: 180px;
   height: 70px;
 }
+
+@media (min-width: 641px) and (max-width: 1199px){
+  .logo {
+    width: 120px;
+    height: 40px;
+  }
+}
+
+
+@media (max-width: 640px){
+  .logo {
+    width: 90px;
+    height: 30px;
+  }
+}
