--- a/src/components/main/main.module.css
+++ b/src/components/main/main.module.css
@@ -53,3 +53,38 @@
   font-style: normal;
   font-weight: 700;
 }
+
+@media (min-width: 641px) and (max-width: 1199px){
+  .container {
+      height: fit-content;
+  }
+
+  .smile {
+    width: 200px;
+    height: 200px;
+  }
+
+  .registrBtn {
+  font-size: 20px;
+}
+
+}
+
+@media (max-width: 640px){
+  .container {
+    padding: 10px;
+    width: 80%;
+    margin: 0 auto;
+    height: fit-content;
+  }
+
+  .smile {
+    width: 150px;
+    height: 150px;
+  }
+
+  .registrBtn {
+    font-size: 18px;
+  }
+
+}
